[gd_scene load_steps=7 format=3 uid="uid://b4kbw1us8ibkq"]

[ext_resource type="Script" path="res://pauseMenu.gd" id="1_kcjeb"]
[ext_resource type="Shader" path="res://shaders/pauseMenu.gdshader" id="2_mm2nw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_had4k"]
shader = ExtResource("2_mm2nw")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_wrt4y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_8dahr"]
resource_name = "menuBlur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.821, 0.821]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1iexn"]
_data = {
"RESET": SubResource("Animation_wrt4y"),
"menuBlur": SubResource("Animation_8dahr")
}

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kcjeb")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_had4k")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -91.0
offset_top = -68.0
offset_right = 91.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="fullscreen" type="CheckButton" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Toggle Fullscreen"

[node name="resume" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="restart" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="quit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1iexn")
}

[connection signal="toggled" from="PanelContainer/VBoxContainer/fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
